--- a/client/src/components/Addition/AddWorkArea/style.css
+++ b/client/src/components/Addition/AddWorkArea/style.css
@@ -1,5 +1,10 @@
-.workArea {
+.addworkArea {
     width: 100%;
-    height: 500px;
-    background-color: blue
+    height: 90%;
+    background-color: #fcf1cf
+    ;
+}
+
+.question{
+    height: 80px;
 }
