--- a/client/src/components/Division/DivIndividualQuestion/style.css
+++ b/client/src/components/Division/DivIndividualQuestion/style.css
@@ -1,9 +1,13 @@
-.individualQuestion {
-    height: 80px;
+.divindividualQuestion {
+    height: 70px;
     width: 80%;
-    background-color: red;
-    margin: 30px;
+    background-color: #FFECB3;
+    margin: 0px;
     overflow: auto;
+    border-radius: 25px;
+    border: 2px solid #00BCD4;
+    padding: 15px; 
+    position: absolute
 }
 
 h5 {
@@ -30,4 +34,8 @@ h5 {
 
 #num2 {
     width: 10%;
+}
+
+#input {
+    height: 30px
 }
