--- a/client/src/components/Multiplication/MultWorkArea/style.css
+++ b/client/src/components/Multiplication/MultWorkArea/style.css
@@ -1,5 +1,9 @@
-.workArea {
+.multiaddworkArea {
     width: 100%;
-    height: 500px;
-    background-color: blue
+    height: 90%;
+    background-color: #fcf1cf;
+}
+
+.question{
+    height: 80px;
 }
