--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -15,5 +15,15 @@
 }
 
 .card {
-    margin: 5%
+    margin: 5%;
+    background-color: #FFECB3;
+    height: 10%;
+    width: 80%;
+    border-radius: 25px;
+    border: 2px solid #00BCD4;
+    padding: 15px; 
+}
+
+.body {
+    height: 100%
 }
